Subtitles through input-slave option are loaded twice in VLC menu when replayed (VLC 3 win32)

:input-slave=file/subtitle:///D:/test%20subtitles.srt\ The subtitles are loaded correctly in VLC menu (Track1), but they are just disabled. If I stop the playback and then press play, then there are 2 subtitles loaded in the menu (Track1, Track2).