input: parse `:input-slave" options earlier

Move the option parsing right before the input-item slaves copy.  This
avoid input-slaves unnecessary duplication each time the input is
reparsed as the input-item slaves copy itself avoid duplicating.

Fixes #19977

(cherry picked from commit 4f7522e620be01a3662bd985aeca1a2b8c4b7ff4)
Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>